--- a/style.css
+++ b/style.css
@@ -148,3 +148,65 @@ p{
     height: 420px;
     margin-top: 160px;
 }
+.content1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80px;
+    
+}
+.cd{
+    width: 500px;
+    height: 400px;
+    text-align: center;
+    margin-left: 60px;
+}
+.content1 h1, .boxx1 h1{
+    color: aliceblue;
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+.content1 h2, .boxx1 h2{
+    color: #00d084;
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+.content2{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+    padding: 0;
+
+}
+.box3{
+    width: 300px;
+    height: 350px;
+    border: 5px solid rgb(52, 50, 50);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 50px;
+
+}
+.content2 .box3 img{
+    width: 140px;
+    height: 140px;
+    margin-top: -75px;
+}
+.content2 .box3 .png{
+    width: 120px;
+    height: 120px;
+}
+.box3 h2{
+    color: aliceblue;
+    text-align: center;
+
+}
+.box3 p{
+    padding: 20px;
+    text-align: justify;
+    font-weight: 500;
+    font-size: 1rem;
+}
