--- a/style.css
+++ b/style.css
@@ -623,3 +623,135 @@ Form input[type="submit"]:hover{
     margin-top: 40px;
 
 }
+.scrollDivs{
+    background-color: #00d084; 
+}
+.scrollDivs h1{
+    font-size: 7rem;
+    color: #f9fcfc;
+    margin-left: 20px;
+    font-weight: 900; 
+    padding-right: 20PX; 
+    
+
+}
+@keyframes scrolls {
+    0%{
+        transform: translateX(calc(0px));
+    }
+    100%{
+        transform: translateX(calc(-100px * 9));
+    }
+}
+.myBlogs{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 300px;
+    margin: 40px;
+}   
+.myBlogs h2{
+    color: aliceblue;
+    font-size: 2rem;
+    margin: 0;
+}
+.myBlogs h1{
+    color: #00d084;
+    font-size: 1.5rem;
+}
+.MBlog{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: space-evenly;
+    align-items: flex-end;
+    
+}
+.MBlog a{
+    background-color: #00d084;
+    color: rgb(7, 7, 7);
+    text-decoration: none;
+    width: 200px;
+    height: 60px;
+    font-size: 1.3rem;
+    font-weight: 700;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: 200px;
+    margin-bottom: 0;
+}
+.MBlog a:hover{
+    background-color: #11151E;
+    color: #fafbfb;
+}
+.myBlog{
+    display: flex;
+    width: 100%;
+    height: 600px;
+    margin: 40px;
+    background-color: black;
+}
+.myBlogImages{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    height: 500px;
+    margin-top: 0;
+
+}
+.myBlogImages img{
+    width: 360px;
+    height: 500px;
+}
+.myBlogImages h2{
+    color: aliceblue;
+    text-align: center;
+    font-size: 1.3rem;
+    padding: 15px;
+}
+.myBlog .myblogtext{
+    width: 300px;
+    height: 400px;
+    background-color: #11151E;
+    margin-top: -60px;
+}
+.myblogtext a{
+    color: #c3c3c7;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: .8rem;
+
+
+}
+.myblogtext .anquor{
+    background-color: #00d084;
+    width: 200px;
+    color: #11151E;
+    height: 50px;
+    margin-top: -30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 50px;
+
+}
+.mybloga{
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    width: 300px;
+
+}
+
+ .fa-solid, .fa-regular{
+    margin-right: 10px;
+
+}
