--- a/style.css
+++ b/style.css
@@ -755,3 +755,121 @@ Form input[type="submit"]:hover{
     margin-right: 10px;
 
 }
+.SubButton{
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    
+    
+}
+.SubBtns{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 500px;
+    height: 300px;
+    margin: 0 auto;
+  
+}
+.SubBtns h2{
+    color: aliceblue;
+    padding: 5px 20px;
+}
+.SubBtns .Notify{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 500px;
+    height: 80px;
+    background-color: #11151E;
+    border: 2px solid #00d084;
+
+}
+.Notify input{
+    background-color: transparent;
+    border: transparent;
+    color: #f8f8f9;
+    font-size: 1rem;
+    margin-left: 10px;
+
+}
+.Notify input .placeholder{
+    color: aliceblue;
+    font-size: 1rem;
+    
+}
+.Notify a{
+    text-decoration: none;
+    color: black;
+    background-color: #00d084;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 60px;
+    margin-right: 10px;
+    font-size: 1.2rem;
+    font-weight: 900;
+}
+.Notify a:hover{
+    color: aliceblue;
+    background-color: #11151E;
+}
+.ldiv{
+    display: grid;
+    grid-template-columns: 400px 300px 300px;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 200px;
+    background-color: #080808;
+}
+.footers{
+    width: 250px;
+    margin-left: 40px;
+    display: grid;
+    grid-template-columns: 80px 200px;
+    
+}
+.footer1 a{
+    background-color: #00d084;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #080808;
+
+}
+.footer1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.footer2{
+    width: 250px;
+}
+.ldiv .footers .footer2 h2{
+    color: aliceblue;
+    font-size: 1.2rem;
+    font-weight: 700;
+    padding: 10px;
+    margin: 0;
+}
+
+.ldiv::after{
+    content: '';
+    background-color: #49494a ;
+    width: 1100px;
+    height: 2px;
+    margin: 0 auto;
+    display: block;
+
+}
